# Diaroo

./: .gitignore  LICENSE  README.md  digest.html  index.html  package-lock.json  package.json  pet-picker.html  reports.html  settings.html  vite.config.ts
sample-pets/platypus/: platypus.dpet
sample-pets/platypus/content/: pet.json
scripts/: generate-cat-sprites.mjs  generate-test-tpet.mjs
src/: App.svelte  DigestPicker.svelte  PetPicker.svelte  Reports.svelte  Settings.svelte  app.css  digest-main.ts  digest.css  main.ts  pet-picker-main.ts  pet-picker.css  reports-main.ts  reports.css  settings-main.ts  settings.css
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/pets/cat/: pet.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: claude.rs  config.rs  digest.rs  mod.rs  monitor.rs  pets.rs  reports.rs
src-tauri/src/services/: activity_log.rs  auto_report.rs  digest_generator.rs  llm_client.rs  mod.rs  scheduled_monitoring.rs  scheduler.rs  screenshot.rs  shell_path.rs  window_info.rs
src-tauri/src/storage/: config.rs  mod.rs  pets.rs  screenshot_store.rs
src/lib/api/: commands.ts  events.ts
src/lib/behavior/: engine.ts  movement.ts  signals.ts  states.ts  types.ts
src/lib/components/: Pet.svelte
src/lib/sprites/: loader.ts  types.ts
src/lib/stores/: pet.ts
